--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mysyle.css">
     <title>My CSTU Story</title>
-    <style>
-       
-    </style>
+    <link rel="stylesheet" href="mysyle.css">
 </head>
 
 <body>
@@ -16,7 +13,7 @@
         <h1>💻 MY CSTU Story 💻</h1>
         <nav>
             <ul>
-                <li><a href="index.thml.html">Home page</a></li>
+                <li><a href="index.html">Home page</a></li>
                 <li><a href="Future Plan.html">Future PlanMy</a></li>
                 <li><a href="My Journey.html">Journey</a></li>
             </ul>
